--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-step-progress-bar": "^1.0.3",
     "react-uid": "^2.3.2",
     "recharts": "^2.2.0",
+    "sandigo-sdk": "../../sandigo-sdk",
     "tinycolor2": "^1.6.0",
     "typescript": "^4.9.4",
     "wagmi": "^0.7.15"
